<resources>
    <string name="app_name">Raju Bista</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="login">Login/Signup</string>
    <string name="home">Home</string>
    <string name="complaint">Complaint</string>
     <string name="appointments">Appointments</string>
    <string name="notifications">Notifications</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

<!--    Login -->
    <string name="welcome">Welcome to,\nRaju Bista App</string>
    <string name="welcome_raju">Raju Bista App</string>
    <string name="logi1">Login</string>
    <string name="email_id">Email id</string>
    <string name="enter_email">Enter your Email id</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter your Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="or">or</string>
    <string name="click">Click here to get Register</string>
    <string name="tagline">Be Focus, Work Hard &amp; Stay Humble</string>



     <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>