<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/login"
            android:title="@string/login" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_complaint"
            android:icon="@drawable/complaintsx"
            android:title="@string/complaint" />
        <item
            android:id="@+id/nav_appointments"
            android:icon="@drawable/appointment"
            android:title="@string/appointments" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/notification"
            android:title="@string/notifications" />
    </group>

</menu>
