<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.rajubista.fragments.LoginFragment"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/white_color"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/avenir_heavy"/>



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_color"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        app:cardElevation="10dp"
        android:layout_gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:orientation="vertical"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logi1"
            android:textColor="@color/black_color"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:fontFamily="@font/avenir_heavy"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_id"
            android:textColor="@color/black_color"
            android:textSize="16sp"
            android:gravity="start|center"
             android:fontFamily="@font/avenir_heavy"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/enter_email"
            android:textColor="@color/black_color"
            android:textSize="15sp"
            android:gravity="start|center"
            android:layout_gravity="center"
            android:background="@drawable/round_edittext"
            android:fontFamily="@font/avenir_heavy"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black_color"
            android:textSize="16sp"
            android:gravity="start|center"
            android:fontFamily="@font/avenir_heavy"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/enter_password"
            android:textColor="@color/black_color"
            android:textSize="15sp"
            android:gravity="start|center"
            android:layout_gravity="center"
            android:background="@drawable/round_edittext"
            android:fontFamily="@font/avenir_book"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>


        <Button
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:text="@string/logi1"
            android:gravity="center"
            android:layout_gravity="center"
            android:fontFamily="@font/avenir_medium"
            android:background="@color/apporange"
            android:textColor="@color/white_color"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/dark_grey_color"
            android:textSize="16sp"
            android:gravity="end|center"
            android:fontFamily="@font/avenir_roman"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textColor="@color/black_color"
            android:textSize="16sp"
            android:gravity="center"
            android:fontFamily="@font/avenir_roman"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click"
            android:textColor="@color/apporange"
            android:textSize="17sp"
            android:gravity="center"
            android:fontFamily="@font/avenir_roman"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"/>

    </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/tagline"
        android:textColor="@color/white_color"
        android:textSize="16sp"
        android:gravity="center"
        android:fontFamily="@font/avenir_book"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />


    </LinearLayout>
</FrameLayout>
